# software-templates

./: .pre-commit-config.yaml  README.md  readthedocs_setup.md  requirements.txt
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-report.yaml  feature-request.yaml
.github/workflows/: checks.yaml  reusable-stale.yaml  stale.yml  update-python.yaml
python/: README.md  cookiecutter.json
python/.github/workflows/: checks.yaml
python/hooks/: .post_gen_project.py.swp  post_gen_project.py
python/{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
python/{{cookiecutter.project_slug}}/.github/: CODEOWNERS
python/{{cookiecutter.project_slug}}/.github/workflows/: checks.yaml  release.yaml  reusable-stale.yaml
python/{{cookiecutter.project_slug}}/docs/source/: changelog.rst  conf.py  contributing.rst  index.rst  install.rst
python/{{cookiecutter.project_slug}}/docs/source/_templates/: module_summary.rst
python/{{cookiecutter.project_slug}}/docs/source/reference/: index.rst
python/{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  api.py  cli.py  config.py  logging.py  models.py  utils.py
python/{{cookiecutter.project_slug}}/tests/: conftest.py  test_api.py
