[project]
name = "{{ cookiecutter.project_slug }}"
authors = [
    {% if cookiecutter.your_name %}{name = "{{ cookiecutter.your_name }}"{% if cookiecutter.your_email %}, email = "{{ cookiecutter.your_email }}"{% endif %}}{% else %}{name = "Wagner Lab"}{% endif %},
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
description = "{{ cookiecutter.description }}"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
{%- if cookiecutter.add_cli %}
    "click",
{%- endif %}
{%- if cookiecutter.add_fastapi %}
    "fastapi",
    "pydantic~=2.1",
{%- endif %}
{%- if cookiecutter.add_fastapi or cookiecutter.add_cli %}
    "pydantic-settings",
{%- endif %}
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
{%- if cookiecutter.add_fastapi %}
    "httpx",
    "jsonschema~=4.24",  # pin to avoid deprecation of ref resolver
    "pyyaml",
{%- endif %}
]
dev = [
    "prek>=0.2.23",
    "ruff==0.14.10",
{%- if cookiecutter.add_fastapi %}
    "fastapi[standard]"
{%- endif %}
]
{%- if cookiecutter.add_docs %}
docs = [
    "sphinx==6.1.3",
    "sphinx-autodoc-typehints==1.22.0",
    "sphinx-autobuild==2021.3.14",
    "sphinx-copybutton==0.5.2",
    "sphinxext-opengraph==0.8.2",
    "furo==2023.3.27",
    "sphinx-github-changelog==1.2.1",
{%- if cookiecutter.add_cli %}
    "sphinx-click==5.0.1",
{%- endif %}
]
{%- endif %}

[project.urls]
Homepage = "https://github.com/{{ cookiecutter.org }}/{{ cookiecutter.repo }}"
Documentation = "https://github.com/{{ cookiecutter.org }}/{{ cookiecutter.repo }}"
Changelog = "https://github.com/{{ cookiecutter.org }}/{{ cookiecutter.repo }}/releases"
Source = "https://github.com/{{ cookiecutter.org }}/{{ cookiecutter.repo }}"
"Bug Tracker" = "https://github.com/{{ cookiecutter.org }}/{{ cookiecutter.repo }}/issues"

[project.scripts]
{%- if cookiecutter.add_cli %}
{{ cookiecutter.project_slug | replace("_", "-") }} = "{{ cookiecutter.project_slug }}.cli:cli"
{%- endif %}

[build-system]
requires = ["setuptools>=77.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true

[tool.ruff]
src = ["src"]
{%- if cookiecutter.add_docs %}
exclude = ["docs/source/conf.py"]
{%- endif %}

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # unused
    "AIR",
    "ERA",
    "YTT",
    "BLE",
    "FBT",
    "CPY",
    "DJ",
    "EXE",
    "FIX",
    "FA",
    "PYI",
    "TD",
    "C90",
    "NPY",
    "PD",
    # ignore for compatibility with formatter
    "D206",
    "D300",
    "W191",
    "E111",
    "E114",
    "E117",
    "E501",
    "W191",
    "S321",
    "COM812",
    "COM819",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    # don't require types on *args, **kwargs
    "ANN002",
    "ANN003",
    # subjective pylint thresholds
    "PLR0904",
    "PLR091",
    "PLR1702",
    "PLC0206",
    # misc unnecessary stuff
    "S321",
    "D203",
    "D205",
    "D213",
    "D400",
    "D415",
]

[tool.ruff.lint.per-file-ignores]
# ANN001 - missing-type-function-argument
# ANN2 - missing-return-type
# D100 - undocumented-public-module
# D102 - undocumented-public-class
# D103 - undocumented-public-function
# S101 - assert
# B011 - assert-false
# INP001 - implicit-namespace-package
# PLR2004 - magic-value-comparison
"tests/*" = [
    "ANN001",
    "ANN2",
    "D",
    "S101",
    "B011",
    "INP001",
    "PLR2004",
]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.format]
docstring-code-format = true
